vlib/v/checker/tests/passing_expr_to_fn_expecting_voidptr.out
vlib/v/checker/tests/passing_expr_to_fn_expecting_voidptr.vv:5:23: error: expression cannot be passed as `voidptr`
    3 | }
    4 | 
    5 | myprintf('%02.02f\n', 1.1)
      |                       ~~~
